<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.2.RELEASE</version>
    </parent>

    <groupId>no.nav.registre.testnorge</groupId>
    <artifactId>testnorge</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>apps</module>
        <module>libs</module>
    </modules>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <organization>NAV (Arbeids- og velferdsdirektoratet) - The Norwegian Labour and Welfare Administration</organization>
            <organizationUrl>https://www.nav.no</organizationUrl>
        </developer>
    </developers>
    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/navikt/testnorge</url>
        </repository>
    </distributionManagement>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <application.version>${maven.build.timestamp}</application.version>
        <sonar.projectKey>navikt_testnorge</sonar.projectKey>
        <sonar.projectName>testnorge</sonar.projectName>
        <sonar.organization>navit</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <!--suppress UnresolvedMavenProperty Ligger som secret i github-->
        <sonar.login>${SONAR_LOGIN}</sonar.login>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <spring-cloud-dependencies.version>Hoxton.SR6</spring-cloud-dependencies.version>
        <springfox.version>2.9.2</springfox.version>
        <ojdbc8.version>19.7.0.0</ojdbc8.version>
        <logstash-logback-encoder.version>6.3</logstash-logback-encoder.version>
        <spring-cloud-contract-wiremock.version>2.2.4.RELEASE</spring-cloud-contract-wiremock.version>
        <assertj.version>3.16.1</assertj.version>
        <sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
        <org.apache.avro.version>1.9.2</org.apache.avro.version>
        <io.confluent.kafka.version>5.5.0</io.confluent.kafka.version>
        <reflections.version>0.9.11</reflections.version>
        <logback-syslog4j>1.0.0</logback-syslog4j>
        <javax.servlet.version>2.5</javax.servlet.version>
        <freg-security.version>2c24d35d</freg-security.version>
        <jacoco.version>0.8.5</jacoco.version>
        <javax.activation.version>1.1</javax.activation.version>
        <mq-jms-spring-boot-starter.version>2.0.0</mq-jms-spring-boot-starter.version>
        <opencsv.version>4.6</opencsv.version>
        <commons-math3.version>3.6.1</commons-math3.version>
        <commons-csv.version>1.8</commons-csv.version>
        <testnorge-consumers.version>1.12.0-RELEASE</testnorge-consumers.version>
        <starter-webflux.version>2.3.2.RELEASE</starter-webflux.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-webflux</artifactId>
                <version>${starter-webflux.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson-bom.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc8</artifactId>
                <version>${ojdbc8.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${javax.activation.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro-compiler</artifactId>
                <version>${org.apache.avro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro-maven-plugin</artifactId>
                <version>${org.apache.avro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro</artifactId>
                <version>${org.apache.avro.version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-avro-serializer</artifactId>
                <version>${io.confluent.kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
            </dependency>
            <dependency>
                <groupId>com.papertrailapp</groupId>
                <artifactId>logback-syslog4j</artifactId>
                <version>${logback-syslog4j}</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>${javax.servlet.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.freg</groupId>
                <artifactId>freg-security-oidc</artifactId>
                <version>${freg-security.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ibm.mq</groupId>
                <artifactId>mq-jms-spring-boot-starter</artifactId>
                <version>${mq-jms-spring-boot-starter.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>com.opencsv</groupId>
                <artifactId>opencsv</artifactId>
                <version>${opencsv.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons-csv.version}</version>
            </dependency>

            <!--Test-->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-wiremock</artifactId>
                <version>${spring-cloud-contract-wiremock.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>no.nav.registre</groupId>
                <artifactId>testnorge-consumers</artifactId>
                <version>${testnorge-consumers.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>github-package-registry-navikt</id>
            <url>https://maven.pkg.github.com/navikt/maven-release</url>
        </repository>
        <repository>
            <id>confluent</id>
            <url>http://packages.confluent.io/maven/</url>
        </repository>
    </repositories>

    <scm>
        <developerConnection>scm:git:git@github.com:navikt/testnorge.git</developerConnection>
        <connection>scm:git:git@github.com:navikt/testnorge.git</connection>
        <url>https://github.com/navikt/testnorge</url>
        <tag>HEAD</tag>
    </scm>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
